Added vertex rep and vetex ids to the id mapping manger, making managing of pathways much easier. Removed the ATableBased dependency form pathway. Refactoring
Note: currently pathway standalone doesn't map any data (wip)

git-svn-id: svn://localhost:8080/caleydo_main/trunk@5435 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3